[package]
name = "pinocchio_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "0.9.1"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
shank = "0.4.5"

[dev-dependencies]
solana-sdk = "3.0.0"
mollusk-svm = "0.5.1"
mollusk-svm-bencher = "0.5.1" 

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
